fix: overflow, avatar img

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,9 +1,6 @@
 .btn {
   height: 36px;
   font-size: 13px;
-  border: none;
-  outline: none;
-  cursor: pointer;
 
   &-primary {
     background-color: var(--active-color);
