--- a/src/pages/profile-page/profile-page.scss
+++ b/src/pages/profile-page/profile-page.scss
@@ -17,6 +17,9 @@
     &__avatar {
       width: 130px;
       height: 130px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       border-radius: 50%;
       background-color: var(--avatar-bg-color);
     }
@@ -50,7 +53,6 @@
       width: 28px;
       height: 28px;
       border-radius: 50%;
-      padding: 0;
       color: var(--text-light-color);
       background-color: var(--active-color);
     }
